Fix : Calculation Metode Normalisasi